--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.babel.js",
-  "scripts": {
-  },
+  "scripts": {},
   "author": "rihori",
   "license": "ISC",
   "devDependencies": {
@@ -14,20 +13,31 @@
     "browser-sync": "^2.27.5",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-cache": "^1.1.3",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-css-url-adjuster": "^0.2.3",
+    "gulp-cssmin": "^0.2.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-pretty-html": "^2.0.10",
     "gulp-pug": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify": "^3.0.2",
     "gulp-util": "^3.0.8",
+    "gulp-webp": "^4.0.1",
     "node-sass": "^6.0.1",
     "pug": "^3.0.2"
   },
   "dependencies": {
-    "gulp-htmlmin": "^5.0.1",
-    "jquery": "^3.6.0"
+    "jquery": "^3.6.0",
+    "lazysizes": "^5.3.2",
+    "normalize.css": "^8.0.1",
+    "swiper": "^7.0.8"
   }
 }
